create node form (ultra beta)

--- a/app/index.css
+++ b/app/index.css
@@ -1,20 +1,26 @@
-
 .font-paytone {
-    font-family: 'Dela Gothic One', sans-serif;
-  }
-  .max-app-width {
-    max-width: 1500px;
-  }
+  font-family: "Dela Gothic One", sans-serif;
+}
+.max-app-width {
+  max-width: 1500px;
+}
 .z-nav {
   z-index: 100;
 }
 
+.z-modal {
+  z-index: 200;
+}
 .f-center {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-  .hero-bg {
-    background: rgb(255,255,255);
-background: linear-gradient(0, rgba(255,255,255,1) 77%, rgba(186,186,186,1) 100%);
-  }
+.hero-bg {
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    0,
+    rgba(255, 255, 255, 1) 77%,
+    rgba(186, 186, 186, 1) 100%
+  );
+}
