--- a/app/globals.css
+++ b/app/globals.css
@@ -9,6 +9,7 @@
     --gray-2: 0 0% 40%;
     --gray-3: 0 0% 21%;
 
+    --dimmed: 0 0% 32.2%;
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
 
@@ -36,8 +37,6 @@
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
- 
-    --radius: 0.5rem;
   }
  
 }
