fixed auth flow

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,8 +8,8 @@
     --gray-1: 0 0% 95%; 
     --gray-2: 0 0% 40%;
     --gray-3: 0 0% 21%;
-
-    --dimmed: 0 0% 32.2%;
+    --skeleton: 0 0% 89.8%;
+     --dimmed: 0 0% 32.2%;
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
 
