--- a/app/index.css
+++ b/app/index.css
@@ -1,3 +1,12 @@
+.hide-scrollbar  {
+  overflow-y: hidden; 
+  overflow-x: hidden;
+}
+
+.show-scrollbar  {
+  overflow-y: auto; 
+  overflow-x: auto;
+}
 .font-paytone {
   font-family: "Dela Gothic One", sans-serif;
 }
